--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-.DS_Store
 anemone-fonts/CNAME
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
