--- a/_config.yml
+++ b/_config.yml
@@ -140,10 +140,16 @@ events:
   - image: "/img/timeline/baracktocat.jpg"
     date: " September 2017 "
     description: "Started down a rabbit hole! My first steps with a Raspberry Pi 3B."
-  - image: "/img/timeline/spidertocat.png"
+  - image: "/img/timeline/Sn0wbreeze.png"
+    date: " May 2013 "
+    description: ""
+  - image: "/img/timeline/OpeniBoot.png"
+    date: " December 2012 "
+    description: "The iPhone 1,2, iDroid, & OpeniBoot."
+  - image: "/img/timeline/Sn0wbreeze.png"
     date: " January 2011 "
     description: "The iPhone2,1 and bootom 359.3, technology has me hooked."
-  - image: "/img/timeline/jailbreaking2.jpg"
+  - image: "/img/timeline/redsn0w.png"
     date: " December 2010 "
     description: "Jailbreaking the iPhone3,3, my love for tech was exposed."
 
