--- a/_config.yml
+++ b/_config.yml
@@ -143,7 +143,7 @@ events:
   - image: "/img/timeline/Sn0wbreeze.png"
     date: " May 2013 "
     description: ""
-  - image: "/img/timeline/OpeniBoot.png"
+  - image: "/img/timeline/Openiboot.png"
     date: " December 2012 "
     description: "The iPhone 1,2, iDroid, & OpeniBoot."
   - image: "/img/timeline/Sn0wbreeze.png"
