--- a/_config.yml
+++ b/_config.yml
@@ -131,10 +131,10 @@ syntax-highlight: True
 ############
 
 events:
-  - image: "/img/timeline/spidertocat.png"
+  - image: "/img/timeline/gce.png"
     date: " April 2019 "
     description: "Saving network overhead from the Cloud! An adventure with Pi-Hole on Google Compute Engine."
-  - image: "/img/timeline/spidertocat.png"
+  - image: "/img/timeline/pihole.png"
     date: " November 2018 "
     description: "Saving network overhead! An adventure with Pi-Hole on Raspberry Pi 3B."
   - image: "/img/timeline/raspberry-pi.png"
