--- a/_config.yml
+++ b/_config.yml
@@ -155,7 +155,7 @@ events:
 
 # First image of the Timeline
 
-timeline-img: "/img/timeline/default.png"
+timeline-img: "/img/timeline/begin.png"
 
 ###########
 # Contact #
