dual boot timeline

--- a/_config.yml
+++ b/_config.yml
@@ -140,9 +140,9 @@ events:
   - image: "/img/timeline/raspberry-pi.png"
     date: " September 2017 "
     description: "Started down a rabbit hole! My first steps with a Raspberry Pi 3B."
-  - image: "/img/timeline/Sn0wbreeze.png"
+  - image: "/img/timeline/macows.png"
     date: " May 2013 "
-    description: ""
+    description: "Dual Booting my MacBookPro8,1."
   - image: "/img/timeline/idroid.jpg"
     date: " December 2012 "
     description: "The iPhone 1,2, iDroid, & OpeniBoot."
