--- a/_config.yml
+++ b/_config.yml
@@ -140,9 +140,18 @@ events:
   - image: "/img/timeline/raspberry-pi.png"
     date: " September 2017 "
     description: "Started down a rabbit hole! My first steps with a Raspberry Pi 3B."
-  - image: "/img/timeline/macows.png"
+  - image: "/img/timeline/linux.jpg"
+    date: " December 2016 "
+    description: "10 Operating System on one laptop. Because why not?!"
+  - image: "/img/timeline/macows.jpg"
+    date: " September 2015 "
+    description: "Triple Booting my MacBookPro8,1, Learning to manage a hybrid MBR."
+  - image: "/img/timeline/redsn0w.jpg"
+    date: " August 2014 "
+    description: "Jailbreaking the iPhone3,3, my love for tech was exposed."
+  - image: "/img/timeline/bootcamp.png"
     date: " May 2013 "
-    description: "Dual Booting my MacBookPro8,1."
+    description: "Dual Booting my MacBookPro8,1, brought to you by BootCamp."
   - image: "/img/timeline/idroid.jpg"
     date: " December 2012 "
     description: "The iPhone 1,2, iDroid, & OpeniBoot."
