--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ force-https: True
 lang: "en"
 author: "Michael Woolweaver"
 title: "{ Michael Woolweaver }"
-description: "Michael Woolweaver's Compter Science Cruise."
+description: "Michael Woolweaver's Computer Science Cruise."
 keywords: "Woolweaver, Michael, blog, computer, science, macOS, iOS, Mac, iPhone"
 favicon: "/img/favicon.ico"
 
