--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ delete-delay: 5000
 lines: # You can add HTML Tags in the Text
   - text: "Science means constantly walking a tightrope between blind faith and curiosity; between expertise and creativity; between experience and epiphany; between ambition and passion - in short, between an old today and a new tomorrow."
   - text: "The aim of education should be to teach us rather how to think, than what to think – rather to improve our minds, so as to enable us to think for ourselves, than to load the memory with thoughts of other men."
-
+  - text: "It is no use to preach to them if you do not act decently yourself, the most effective way you can preach is by your practice."
 #me-img: "/img/jetpacktocat.png"
 
 # To use facebook profile pic comment the previous line and uncomment the following
@@ -143,6 +143,9 @@ events:
   - image: "/img/timeline/linux.jpg"
     date: " December 2016 "
     description: "10 Operating System on one laptop. Because why not?!"
+  - image: "/img/timeline/electricity.jpg"
+    date: " May 2016 "
+    description: "Wireless electricity is pure excitement."
   - image: "/img/timeline/macows.jpg"
     date: " September 2015 "
     description: "Triple Booting my MacBookPro8,1, Learning to manage a hybrid MBR."
