--- a/_config.yml
+++ b/_config.yml
@@ -213,7 +213,7 @@ err-404-img: "/img/labtocat.png"
 
 keybase-username: mwoolweaver
 keybase-in-social: True
-keybase-in-footer: True
+keybase-in-footer: False
 
 ################################################################################
 
