--- a/_config.yml
+++ b/_config.yml
@@ -104,11 +104,11 @@ icon-192p: "/img/web-app/icon-192p.png"
 # Blog #
 ########
 
-enable-gesture-navigation: True
+#enable-gesture-navigation: True
 
-post-preview-words: 96
+#post-preview-words: 96
 
-paginate: 5
+#paginate: 5
 
 email-share: False
 fb-share: False
