--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ lang: "en"
 author: "Michael Woolweaver"
 title: "{ Michael Woolweaver }"
 description: "Michael Woolweaver's Technology Cruise."
-keywords: "Woolweaver, Michael, blog, computer, science, macOS, iOS, Mac, iPhone, technology"
+keywords: "Woolweaver, Michael, computer, science, macOS, iOS, Mac, iPhone, technology"
 favicon: "/img/favicon.ico"
 
 ################
