--- a/_config.yml
+++ b/_config.yml
@@ -205,7 +205,7 @@ social:
   #- title: "facebook"
     #url: "https://facebook.com/"
   - title: "twitter"
-    url: "https://twitter.com/m_woolweaver"
+    url: "https://twitter.com/voucher_swap"
   - title: "github"
     url: "https://github.com/mwoolweaver"
   #- title: "bitcoin"
