--- a/_config.yml
+++ b/_config.yml
@@ -171,7 +171,7 @@ events:
     description: "The iPhone 1,2, iDroid, & OpeniBoot."
   - image: "/img/timeline/Sn0wbreeze.png"
     date: " January 2011 "
-    description: "The iPhone2,1 and bootom 359.3, technology has me hooked."
+    description: "The iPhone2,1 and bootrom 359.3, technology has me hooked."
   - image: "/img/timeline/redsn0w.jpg"
     date: " December 2010 "
     description: "Jailbreaking the iPhone3,3, my love for tech was exposed."
